# fftools_lib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_JP.md  cmdutils.c  ffmpeg.c  ffmpeg.h  ffmpeg_opt.c  ffplay.c  ffprobe.c  unitybuf2.c
linux/include/: config.h  config_components.h
linux/include/libavformat/: unitybuf.h
linux/include/libavutil/: ffversion.h
mac/include/: config.h
mac/include/libavformat/: unitybuf.h
mac/include/libavutil/: ffversion.h
mac/lib/: libavdevice.59.4.100.dylib  libavfilter.8.24.100.dylib  libavformat.59.16.100.dylib  libavutil.57.17.100.dylib  libswresample.4.3.100.dylib  libswscale.6.4.100.dylib
win/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
win/include/: config.h  config_components.h
win/include/libavutil/: ffversion.h
win/x86/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  swresample.lib  swscale.lib
win/x86/include/: config.h  config_components.h
win/x86/include/libavutil/: ffversion.h
